# PEPractice

./: CMakeLists.txt  README.md  main.cpp
projectEulerLib/: CMakeLists.txt  projectEuler.txt
projectEulerLib/include/: Part1.h  info.h
projectEulerLib/src/: info.cpp
tests/: CMakeLists.txt  Part1_Tests.cpp  simple_test.cpp
